# cxx

./: .gitignore  CMakeLists.txt  README.md
ManagementSystem/: ManagementSystem.cpp
Toy_EmployeeDB/: CMakeLists.txt  Database.h  DatabaseTest.cpp  Employee.cpp  Employee.h  EmployeeTest.cpp  README.md  build.sh  main.cpp  rua.h
c/: 03_math.c  04_condition.c  07_binary_search.c  a.out  basics.md  the_c_pro_lang.cc  wc.cc
c/c_language/: 01_test.c  01_variable_arguments.md  03_printf.c  05_gcd.c  06_manxint.c  06_my_printf.c  07_array.c  07_binary_search.c  08_prime.c  09_LOG.c  09_MAX.c  basics.md
c/ds/: vector.cc
cpp/: CMakeLists.txt  Database.cpp  Database.h  Employee.cpp  Employee.h  Makefile  README.md  build.sh  main.cpp  rua.cpp
cxx/: CMakeLists.txt  build  no.146.strings.cpp  test_compile_options.cpp
cxx/pragma_omp/: CMakeLists.txt  main.c
cxx/pragma_once/: CMakeLists.txt  child.c  grandparent.h
python/: README.md  dataset.py  kmeans.py  test.py
utils/: random_cxx.cpp
